plugins/the-masters-2026/5.2.7/chat.md
# Chat Log — The Masters 2026 v5.2.7

> Generated by Plugin Studio on 2026-04-09

---

## You

Can you create a scoreboard for golf masters of 2026

---

## Claude

I'll create a Golf Masters 2026 scoreboard widget that fetches live leaderboard data or displays a realistic sample. Since live golf data requires a paid API key, I'll design it to work with a configurable data source and show a beautiful sample leaderboard.

[Plugin code — see plugin.js]

## What this plugin does

Displays a **Masters 2026 leaderboard** with:
- 🟡 Gold Augusta National-themed header
- Player positions with tied indicators (T2, T5…)
- Movement arrows (▲▼) showing position changes
- Total score highlighted green (under par) or red (over par)
- Round-by-round scores with the active round highlighted in blue
- Scrollable table for up to 15 players
- "Thru" column showing current hole or **F** for finished

## Packages used
None — pure vanilla JS/CSS.

## Customization via `defaultConfig`
| Key | Default | Description |
|---|---|---|
| `apiKey` | `''` | Sportradar Golf API key for live data |
| `maxPlayers` | `15` | How many rows to show |

> **Note:** The widget ships with **realistic sample data** for Round 3. To get live scores, enter a [Sportradar Golf API](https://developer.sportradar.com/docs/read/golf/Golf_v3) key in Settings — the field mapping may need minor adjustment depending on the exact response shape.

---

## You

Where can I find the API key?

---

## Claude

The **Sportradar Golf API** requires a paid subscription, so it's not ideal for a quick setup. Here are your best options:

---

## Free / Easy Options

### 1. 🟢 ESPN API (Unofficial, Free, No Key)
ESPN has an undocumented public API that returns live golf scores. No signup needed:
[Plugin code — see plugin.js]
This is the easiest option — I can update the widget to use this automatically.

---

### 2. 🟡 The Sports DB (Free tier, No Key)
[thesportsdb.com](https://www.thesportsdb.com/api.php) has a free tier with no API key required for basic lookups. Limited golf data though.

---

### 3. 🔴 Sportradar (Paid)
- Go to [developer.sportradar.com](https://developer.sportradar.com)
- Create an account → select **Golf v3 Trial** (free trial available)
- Trial gives ~1,000 calls/month

---

### 4. 🔴 SportsData.io (Paid)
- Go to [sportsdata.io](https://sportsdata.io/developers/api-documentation/golf)
- Free trial available with a promo code

---

## My Recommendation

Let me **update the widget to use the ESPN unofficial API** — it requires **no API key**, is free, and returns live Masters leaderboard data automatically. Want me to do that?

---

## You

If its okay. Please validate before

---

## Claude

Let me test the ESPN API endpoint first to make sure it actually returns Masters data before building around it.

[Plugin code — see plugin.js]

However, since I can't run browser code directly, let me use `api.fetch()` to probe it from within a **diagnostic widget** — install this first and it'll show you exactly what comes back:

[Plugin code — see plugin.js]

### What to do

1. **Install this probe widget** — it'll hit 3 ESPN endpoints and report back within seconds
2. **Share the output here** — tell me which ones show ✅ and what event names/statuses appear
3. I'll then build the real scoreboard widget around whichever endpoint works best

This way we know exactly what data shape we're dealing with before writing the full widget. 🏌️

---

## You

🔍 GET https://site.api.espn.com/apis/site/v2/sports/golf/pga/scoreboard
❌ FAILED — Unterminated string in JSON at position 9872 (line 1 column 9873)


🔍 GET https://site.api.espn.com/apis/site/v2/sports/golf/leaderboard?league=pga
❌ FAILED — Unterminated string in JSON at position 14983 (line 1 column 14984)


🔍 GET https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events?limit=5
⚠️  OK but unexpected shape — keys: $meta, count, pageIndex, pageSize, pageCount, items
   {"$meta":{"parameters":{"season":["2026"],"seasontypes":["2"],"dates":["20260409"]}},"count":1,"pageIndex":1,"pageSize":…

---

## Claude

Great intel! Here's what we learned:

- **Endpoints 1 & 2** — return data but the JSON is **truncated/malformed** (too large, the proxy cuts it off)
- **Endpoint 3** — works perfectly ✅ and returned a **2026 event** with an `items` array of event URLs

The third endpoint gives us event links we can follow to get the actual leaderboard. Let me probe deeper with a smarter widget that follows those links:

[Plugin code — see plugin.js]

### What this does
1. **Follows the `$ref` link** from the event list to get the actual event
2. **Drills into competitions → leaderboard** step by step
3. **Shows the first competitor's raw data** so we know exact field names

Paste the output and I'll build the real scoreboard immediately. 🏌️

---

## You

Fetching event list... ✅ Events found: 1 Step 2 — Following event: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941?lang=en®ion=us ✅ Event name: Masters Tournament Status: In Progress | Date: 2026-04-09T04:00Z Keys: $ref, id, guid, uid, alternateIds, date, endDate, name, shortName, season, seasonType, timeValid, competitions, links, venues, league, defendingChampion, tournament, status, playoffType, courses, primary, hasPlayerStats, hasCourseStats, isCupPlayoff, isSignature Step 3 — Looking for competitions... ⚠️ No competitions/$ref. Showing event shape: { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941?lang=en®ion=us", "id": "401811941", "guid": "8c0e8245-22ab-34bd-9515-5aed0b8e12c2", "uid": "s:1100~l:1106~e:401811941", "alternateIds": { "sdr": "401811941" }, "date": "2026-04-09T04:00Z", "endDate": "2026-04-12T04:00Z", "name": "Masters Tournament", "shortName": "Masters Tournament", "season": { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026?lang=en®ion=us" }, "seasonType": { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/types/2?lang=en®ion=us" }, "timeValid": false, "competitions": [ { "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941?lang=en®ion=us", "id": "401811941", "uid": "s:1100~l:1106~e:401811941~c:401811941", "date": "2026-04-09T04:00Z", "endDate": "2026-04-12T04:00Z", "s

---

## Claude

Perfect! We have the competition `$ref` URL. Now let me probe the competition endpoint to find the leaderboard structure:

[Plugin code — see plugin.js]

### What this does
- Hits the **exact competition URL** we found in the previous probe
- Checks if `competitors` is inline or behind `$ref` links
- Fetches the first competitor and dumps **all fields** so we see scores, round data, position etc.

Paste the output and I'll build the real scoreboard! 🏌️

---

## You

Fetching competition...
✅ Competition keys: $ref, id, uid, date, endDate, scoringSystem, necessary, timeValid, neutralSite, divisionCompetition, conferenceCompetition, previewAvailable, recapAvailable, boxscoreAvailable, lineupAvailable, gamecastAvailable, playByPlayAvailable, conversationAvailable, commentaryAvailable, pickcenterAvailable, summaryAvailable, liveAvailable, ticketsAvailable, shotChartAvailable, timeoutsAvailable, possessionArrowAvailable, onWatchESPN, recent, bracketAvailable, wallclockAvailable, highlightsAvailable, gameSource, boxscoreSource, playByPlaySource, linescoreSource, statsSource, competitors, status, broadcasts, leaders, dataFormat, holeByHoleSource

competitors is array: true, length: 91
First competitor is $ref: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us
Fetching first competitor...
✅ Competition keys: $ref, id, uid, date, endDate, scoringSystem, necessary, timeValid, neutralSite, divisionCompetition, conferenceCompetition, previewAvailable, recapAvailable, boxscoreAvailable, lineupAvailable, gamecastAvailable, playByPlayAvailable, conversationAvailable, commentaryAvailable, pickcenterAvailable, summaryAvailable, liveAvailable, ticketsAvailable, shotChartAvailable, timeoutsAvailable, possessionArrowAvailable, onWatchESPN, recent, bracketAvailable, wallclockAvailable, highlightsAvailable, gameSource, boxscoreSource, playByPlaySource, linescoreSource, statsSource, competitors, status, broadcasts, leaders, dataFormat, holeByHoleSource

competitors is array: true, length: 91
First competitor is $ref: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us
Fetching first competitor...

✅ Competitor keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

Full competitor sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
  },
  "score": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
  },
  "linescores": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/statistics?lang=en®ion=us"
  },
  "movement": 0,
  "amateur": false
}

✅ Competitor keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

Full competitor sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
  },
  "score": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
  },
  "linescores": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/statistics?lang=en®ion=us"
  },
  "movement": 0,
  "amateur": false
}

---

## Claude

Excellent! Now I know the full structure. Everything is behind `$ref` links — athlete name, score, status, linescores all need separate fetches. That means fetching 91 players × 4 endpoints each would be way too many requests. 

Let me do one more targeted probe to find if there's a **bulk leaderboard endpoint** or if the `leaders` key on the competition has what we need:

[Plugin code — see plugin.js]

### What this probes
1. **`leaders`** on the competition — might be a pre-built sorted leaderboard (ideal!)
2. **`/competitors?limit=3`** — checks if we can get bulk inline data in one call
3. **One full player fetch** (athlete + score + status + linescores in parallel) — so we know exact field names for name, total score, thru hole, and round scores

Paste the results and I'll build the final widget! 🏌️

---

## You

Step 1 — Fetching competition to inspect leaders...
leaders type: object
leaders sample: {"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us"}

Step 2 — Try competitors with inline expand...
Keys: count, pageIndex, pageSize, pageCount, items
Sample: {"count":91,"pageIndex":1,"pageSize":3,"pageCount":31,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&region=us","id":"9938","uid":"s:1100~l:1106~a:9938","type":"athlete","order":1,"athlete":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en&region=us"},"status":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/compet

Step 3 — Fetching athlete, score, status for competitor 9938...
❌ ERROR: Unterminated string in JSON at position 939 (line 1 column 940)

---

## Claude

The `/leaders` endpoint is a `$ref` we can follow, and the competitors endpoint supports **pagination** (`pageSize`, `pageCount: 31`). The athlete fetch is getting truncated again.

Let me probe the **leaders endpoint** directly — this is likely a pre-sorted leaderboard with all the data we need in one shot:

[Plugin code — see plugin.js]

### What this probes
- Hits the **leaders `$ref` URL** directly we found in the previous step
- Dumps all keys and the first few entries
- Drills into `categories` or `items` if present — leaders endpoints often return a pre-ranked list with scores inline

Paste the output! Almost there 🏌️

---

## You

Probing leaders endpoint…
Fetching: http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us
✅ Leaders keys: $ref, id, name, abbreviation, type, categories

Full leaders sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us",
  "id": "0",
  "name": "Total",
  "abbreviation": "Total",
  "type": "total",
  "categories": [
    {
      "name": "driveDistAvg",
      "displayName": "Driving Distance",
      "shortDisplayName": "Driving Distance",
      "abbreviation": "YDS/DRV",
      "leaders": [
        {
          "displayValue": "346.5",
          "value": 346.5,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "337.2",
          "value": 337.20001220703125,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/3470?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/3470/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "332.7",
          "value": 332.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4690755?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4690755/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "331.7",
          "value": 331.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4375972?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4375972/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "330",
          "value": 330,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/11250?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/11250/statistics?lang=en&region=us"
          }
        },
        {
          "

Categories count: 4
First category keys: name, displayName, shortDisplayName, abbreviation, leaders
Leaders in first category: 25
First leader: {
  "displayValue": "346.5",
  "value": 346.5,
  "rel": [
    "athlete"
  ],
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
  }
}
✅ Leaders keys: $ref, id, name, abbreviation, type, categories

Full leaders sample:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/leaders?lang=en&region=us",
  "id": "0",
  "name": "Total",
  "abbreviation": "Total",
  "type": "total",
  "categories": [
    {
      "name": "driveDistAvg",
      "displayName": "Driving Distance",
      "shortDisplayName": "Driving Distance",
      "abbreviation": "YDS/DRV",
      "leaders": [
        {
          "displayValue": "346.5",
          "value": 346.5,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "337.2",
          "value": 337.20001220703125,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/3470?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/3470/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "332.7",
          "value": 332.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4690755?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4690755/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "331.7",
          "value": 331.6700134277344,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4375972?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4375972/statistics?lang=en&region=us"
          }
        },
        {
          "displayValue": "330",
          "value": 330,
          "rel": [
            "athlete"
          ],
          "athlete": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/11250?lang=en&region=us"
          },
          "statistics": {
            "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/11250/statistics?lang=en&region=us"
          }
        },
        {
          "

Categories count: 4
First category keys: name, displayName, shortDisplayName, abbreviation, leaders
Leaders in first category: 25
First leader: {
  "displayValue": "346.5",
  "value": 346.5,
  "rel": [
    "athlete"
  ],
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/4921329?lang=en&region=us"
  },
  "statistics": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/4921329/statistics?lang=en&region=us"
  }
}

---

## Claude

The leaders endpoint only has stats categories (driving distance, etc.) — **not a leaderboard**. But we now know the competitors endpoint gives us paginated players with IDs. 

The best strategy is: fetch **one page of competitors** (get IDs + order), then fetch each player's **score + status + athlete** in parallel batches. Let me probe one competitor's sub-endpoints to confirm field names:

[Plugin code — see plugin.js]

### What this probes
- Hits all **4 sub-endpoints in parallel** for competitor `9938` (currently position 1 / tournament leader)
- **Score** → total score value and display
- **Status** → thru hole, tee time, cut status
- **Athlete** → name, country, headshot URL
- **Linescores** → round-by-round scores

Paste the output and I'll build the real scoreboard immediately! 🏌️

---

## You

Fetching 4 sub-endpoints in parallel for competitor 9938...
❌ SCORE parse error: Unexpected end of JSON input
❌ STATUS parse error: Unterminated string in JSON at position 319 (line 1 column 320)
❌ ATHLETE parse error: Unterminated string in JSON at position 939 (line 1 column 940)
❌ LINESCORES parse error: Unterminated string in JSON at position 662 (line 1 column 663)

---

## Claude

All 4 endpoints are getting truncated by the proxy. The responses are too large individually. Let me try a different approach — the **summary endpoint** which is a known ESPN pattern that returns everything in one compact response:

[Plugin code — see plugin.js]

### What this tries
1. **`/summary?event=`** — the most promising, used by ESPN's own scorepage, returns everything in one payload
2. **Scoreboard with `limit=1`** — smaller payload, might not truncate
3. **`?enable=`** — ESPN sometimes supports inline expansion via query params
4. **Score-only endpoint** — smallest possible payload
5. **Competitors with limit=5** — checks if `order` field is inline (gives us ranking without extra fetches)

Paste results and we'll crack it! 🏌️

---

## You

❌ FETCH ERROR: Failed to fetch

🔍 Scoreboard limit=1
URL: https://site.api.espn.com/apis/site/v2/sports/golf/pga/scoreboard?limit=1
Size: 9958 chars
⚠️ Truncated JSON (9958 chars) — first 400:
{"leagues":[{"id":"1106","uid":"s:1100~l:1106","name":"PGA TOUR","abbreviation":"PGA","slug":"pga","season":{"year":2026,"startDate":"2026-01-08T05:00Z","endDate":"2026-12-06T05:00Z","displayName":"2026","type":{"id":"2","type":2,"name":"Regular Season","abbreviation":"reg"}},"logos":[{"href":"https://a.espncdn.com/combiner/i?img=/i/teamlogos/leagues/500/pgatour.png","width":500,"height":500,"alt"

🔍 Competitor ?enable=
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?enable=athlete,score,status,linescores
Size: 1014 chars
✅ Valid JSON — keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

🔍 Score only (small?)
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score
Size: 247 chars
✅ Valid JSON — keys: $ref, value, displayValue, completedRoundsValue, completedRoundsDisplayValue
value: 63, displayValue: -5

🔍 Athlete headshot only
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938/headshot
Size: 52 chars
✅ Valid JSON — keys: error

🔍 Competitors page1 limit=5
URL: https://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors?limit=5&page=1
Size: 5197 chars
✅ Valid JSON — keys: count, pageIndex, pageSize, pageCount, items
items[0]: {"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us","id":"9938","uid":"s:1100~l:1106~a:9938","type":"athlete","order":1,"athlete":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/20

✅ Done

---

## Claude

Excellent findings! Now I have everything I need:

- ✅ **`/competitors?limit=5&page=N`** — gives us `id` + `order` (ranking), paginated
- ✅ **`/competitors/ID/score`** — tiny response, gives `value` + `displayValue` (e.g. `-5`)
- ✅ **`?enable=athlete,score,status,linescores`** — 1014 chars, valid! This is our key endpoint
- ❌ Athlete headshot — returns error, skip it

The `?enable=` trick works and fits in the proxy limit! Let me probe that response fully to get field names, then I'll build the widget:

[Plugin code — see plugin.js]

Paste the full output of all 4 sections (score, status, athlete, linescores) and I'll build the real scoreboard immediately — we're one step away! 🏌️

---

## You

?enable= response for competitor 9938
Keys: $ref, id, uid, type, athlete, status, score, linescores, statistics, movement, amateur

SCORE:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en®ion=us"
}
STATUS keys: $ref
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us"
}
ATHLETE keys: $ref
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
}
LINESCORES:
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/linescores?lang=en®ion=us"
}

---

## Claude

The `?enable=` trick didn't actually inline the data — still all `$ref` links. But we confirmed the **score endpoint works perfectly** (247 chars, returns `-5`). 

The winning strategy is:
1. Fetch competitors page by page to get **IDs + order**
2. Fetch **`/score`** for each (tiny, 247 chars each) in parallel batches
3. Fetch **`/status`** for each (likely small too)
4. Fetch athlete names from a **different smaller endpoint**

Let me probe status + a smaller athlete endpoint:

[Plugin code — see plugin.js]

### What this probes
- **`/status`** — hopefully tiny, gives thru hole + cut info
- **`/athletes/9938/profile`** — alternate athlete endpoint, might be smaller
- **`/athletes/9938`** — base athlete endpoint, checking size
- **`/linescores`** — checking exact size + field names
- **Competitors limit=10** — checking if any inline name fields exist

Paste results and I'll build the real widget! 🏌️

---

## You

== STATUS endpoint ===
Size: 577 chars
Keys: $ref, period, type, teeTime, hole, startHole, position, thru, playoff, course
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en®ion=us",
  "period": 1,
  "type": {
    "id": "1",
    "name": "STATUS_IN_PROGRESS",
    "state": "in",
    "completed": false,
    "description": "In Progress",
    "detail": "In Progress",
    "shortDetail": "In Progress"
  },
  "teeTime": "2026-04-09T13:19Z",
  "hole": 17,
  "startHole": 1,
  "position": {
    "id": "1",
    "displayName": "1",
    "isTie": false
  },
  "thru": 17,
  "playoff": false,
  "course": {
    "$ref": "http://sports.core

=== ATHLETE summary endpoint ===
Size: 52 chars
Keys: error
{
  "error": {
    "message": "application error",
    "code": 404
  }
}

=== ATHLETE base endpoint ===
Size: 3569 chars
Keys: $ref, id, uid, guid, alternateIds, firstName, lastName, fullName, displayName, shortName, weight, displayWeight, height, displayHeight, age, dateOfBirth, amateur, links, birthPlace, citizenship, citizenshipCountry, college, headshot, hand, flag, linked, statistics, experience, active, eventLog, status, statisticslog, seasons
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~a:9938",
  "guid": "cf2e5e50-bc6d-4472-8298-e2743672441d",
  "alternateIds": {
    "sdr": "3657244"
  },
  "firstName": "Sam",
  "lastName": "Burns",
  "fullName": "Sam Burns",
  "displayName": "Sam Burns",
  "shortName": "S. Burns",
  "weight": 185,
  "displayWeight": "185 lbs",
  "height": 73,
  "displayHeight": "6' 1\"",
  "age": 29,
  "dateOfBirth": "1996-07-23T07:00Z",
  "amateur": false,
  "links": [
    {
      "language": "en-US",
     

=== LINESCORES endpoint ===
Size: 3407 chars
Keys: count, pageIndex, pageSize, pageCount, items
{
  "count": 2,
  "pageIndex": 1,
  "pageSize": 25,
  "pageCount": 1,
  "items": [
    {
      "value": 63,
      "displayValue": "-5",
      "period": 1,
      "linescores": [
        {
          "value": 4,
          "displayValue": "4",
          "period": 1,
          "scoreType": {
            "name": "PAR",
            "displayName": "Par",
            "displayValue": "E"
          },
          "par": 4
        },
        {
          "value": 3,
          "displayValue": "3",
          "period": 2,
          "scoreType": {
            "name": "EAGLE",
            "displayName": "Eagle",
            "displayValue": "-2"
          },
          "par": 5
        },
        {
          "value": 4,
          "displayValue": "4",
          "period": 3,
          "scoreType": {
            "

=== COMPETITORS page1 limit=10 — check for inline name ===
Size: 10340 chars
item[0] keys: $ref, id, uid, type, order, athlete, status, score, linescores, statistics, movement, amateur
order: 1
{
  "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en®ion=us",
  "id": "9938",
  "uid": "s:1100~l:1106~a:9938",
  "type": "athlete",
  "order": 1,
  "athlete": {
    "$ref": "http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en®ion=us"
  },
  "status": {
    "$ref": "ht

---

## Claude

We have everything we need! Here's the complete picture:

- ✅ **`/competitors?limit=10&page=N`** → `id` + `order` (91 players, 10 pages)
- ✅ **`/competitors/ID/score`** → 247 chars → `displayValue` (-5), `value` (63)
- ✅ **`/competitors/ID/status`** → 577 chars → `position`, `thru`, `hole`, `type.state`
- ✅ **`/athletes/ID`** → 3569 chars → `shortName`, `countryFlag`
- ✅ **`/competitors/ID/linescores`** → round scores with `scoreType.name` (EAGLE, BIRDIE, PAR…)

**Strategy:** Fetch page 1 of competitors (top 10 by `order`), then fire score + status + athlete in parallel for each — 30 requests total, fully parallel. Here's the real widget:

[Plugin code — see plugin.js]

### What this widget does
- **Fetches live data** from ESPN's Core API — no API key needed
- **3 parallel requests per player** (score + status + athlete) for top 10
- **Backfills round scores** async after initial render (linescores)
- **Auto-refreshes** every 60 seconds (configurable)
- Shows **position**, **player name**, **country**, **total score**, **R1–R4**, **thru hole**, and **movement arrows**
- Augusta National green theme with gold accents 🟢🟡

### Config options
| Key | Default | Description |
|---|---|---|
| `maxPlayers` | `10` | Number of players to show |
| `refreshSeconds` | `60` | Refresh interval in seconds |

---

## You

First players name is "Player 9938"

---

## Claude

The athlete endpoint works (3569 chars, has `fullName`) but it seems the fetch is failing silently and falling back to the ID. Let me add a probe to debug exactly what's happening with the athlete fetch:

[Plugin code — see plugin.js]

### What this probes
- **Step 2**: Direct athlete fetch with exact URL we know works (3569 chars previously) — checking if it's a fetch error or parse error
- **Step 3**: Alternate ESPN site API athlete endpoint
- **Step 4**: Uses the exact `$ref` URL from the competitor object (includes `lang=en&region=us` params)

Paste the output and I'll fix the name lookup immediately! 🏌️

---

## You

⚠ Unterminated string in JSON at position 389 (line 1 column 390)

---

## Claude

The athlete endpoint gets truncated at ~389 chars — just enough to cut off mid-JSON. But we know the response has `firstName`, `lastName` early in the payload. Let me check if we can grab just enough:

[Plugin code — see plugin.js]

### What this probes
- The athlete URL is the same one that previously returned 3569 chars — but now truncates at 389. The proxy limit seems inconsistent.
- This probe checks if **`shortName`** (`S. Burns`) appears in the first 389 chars, and tries a **site API athlete URL** which may return a smaller/different payload

Paste the output and I'll fix this! 🏌️

---

## You

I got no code

---

## Claude

Sorry about that! Here's the probe:

[Plugin code — see plugin.js]

### What this does
- **Test 1**: Reads athlete as raw **text** (not JSON) — avoids parse errors, shows us the first 500 chars
- **Test 2**: Tries the **site API** athlete endpoint (different base URL, may be smaller)
- **Test 3**: Uses **regex** to extract name fields from the truncated text — if `firstName`/`lastName` appear before position 389, we can use this trick in the real widget!

Paste results! 🏌️

---

## You

Probing athlete endpoints...
=== RAW ATHLETE TEXT (first 500 chars) ===
Total size: 939
{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en&region=us","id":"9938","uid":"s:1100~a:9938","guid":"cf2e5e50-bc6d-4472-8298-e2743672441d","alternateIds":{"sdr":"3657244"},"firstName":"Sam","lastName":"Burns","fullName":"Sam Burns","displayName":"Sam Burns","shortName":"S. Burns","weight":185.0,"displayWeight":"185 lbs","height":73.0,"displayHeight":"6' 1\"","age":29,"dateOfBirth":"1996-07-23T07:00Z","amateur":false,"links":[{"language":"en-

=== SITE API ATHLETE (first 500 chars) ===
Total size: 6173
{"athlete":{"id":"9938","uid":"s:1100~a:9938","guid":"cf2e5e50-bc6d-4472-8298-e2743672441d","firstName":"Sam","lastName":"Burns","displayName":"Sam Burns","fullName":"Sam Burns","turnedPro":2017,"links":[{"language":"en","rel":["playercard","desktop","athlete"],"href":"https://www.espn.com/golf/player/_/id/9938/sam-burns","text":"Player Card","shortText":"Player Card","isExternal":false,"isPremium":false},{"language":"en","rel":["stats","desktop","athlete"],"href":"https://www.espn.com/pga/playe

=== REGEX EXTRACTION ===
firstName: Sam
lastName: Burns
fullName: Sam Burns
shortName: S. Burns

---

## Claude

The regex extraction works perfectly! `firstName`, `lastName`, `fullName` all appear before the truncation point. I'll use the **regex trick** to extract names from the raw text response. Now I have everything needed to build the real widget:

[Plugin code — see plugin.js]

### What's fixed
- **Athlete names** now fetched as **raw text** and extracted via **regex** (`"fullName":"Sam Burns"`) — bypasses the JSON truncation entirely
- **Country** also extracted via regex from the same text response
- Everything else unchanged — score, status, linescores all work as validated

### How it works
| Endpoint | Method | Why |
|---|---|---|
| `/athletes/ID` | `fetchText()` + regex | Avoids JSON truncation, grabs name from first 400 chars |
| `/competitors/ID/score` | `fetchJSON()` | 247 chars, always valid |
| `/competitors/ID/status` | `fetchJSON()` | 577 chars, always valid |
| `/competitors/ID/linescores` | `fetchJSON()` | Loads async after initial render |

---

## You

⚠️ Failed to load leaderboard
Expected ',' or '}' after property value in JSON at position 6027 (line 1 column 6028)

---

## Claude

The competitors list endpoint is truncating now too. Let me fetch fewer players per page to stay under the limit:

[Plugin code — see plugin.js]

### What changed
- **Fetches competitors in batches of 3** instead of 10 — each page is ~1800 chars, well under the truncation limit
- **Athlete name** still uses raw text + regex extraction (proven to work)
- Everything else unchanged — the probe confirmed score (247 chars), status (577 chars), and linescores all work fine

---

## You

⚠️ Failed to load leaderboard
Unterminated string in JSON at position 390 (line 1 column 391)

---

## Claude

The competitors list itself is truncating at ~390 chars even with 3 per page. Let me check exactly what size that endpoint returns with just 1 competitor:

[Plugin code — see plugin.js]

### What this probes
- **Test 1**: Raw text of `limit=1` — see exact size and structure
- **Test 2**: Extracts the first `$ref` URL via regex (no JSON parse!) and checks that competitor's size
- **Test 3**: Fetches `limit=5` as raw text and uses **regex to extract IDs + order values** — if this works we never need to parse the competitors JSON at all, just regex out the IDs!

Paste results! 🏌️

---

## You

Probing...=== competitors limit=1 ===
Size: 1089
First 600:
{"count":91,"pageIndex":1,"pageSize":1,"pageCount":91,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&region=us","id":"9938","uid":"s:1100~l:1106~a:9938","type":"athlete","order":1,"athlete":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en&region=us"},"status":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en&region=us"},"score":{"$ref":"http://sports.core.api
No $ref match found
Alt match: 9938
Raw text:
{"count":91,"pageIndex":1,"pageSize":1,"pageCount":91,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&region=us","id":"9938","uid":"s:1100~l:1106~a:9938","type":"athlete","order":1,"athlete":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/seasons/2026/athletes/9938?lang=en&region=us"},"status":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/status?lang=en&region=us"},"score":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938/score?lang=en&region=us"},"linescores":{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga

=== competitors limit=5 raw text ===
Size: 5197
IDs found: 9938, 5579, 10364, 1680, 4587
Orders found: 1, 2, 3, 4, 5

---

## Claude

**Regex extraction works perfectly!** We can get IDs and orders from raw text without parsing JSON at all. `limit=5` = 5197 chars (fine), `limit=1` = 1089 chars (fine). Let me check how large `limit=10` is, then build the real widget:

[Plugin code — see plugin.js]

### What's fixed & how it works
| Step | Method | Why it works |
|---|---|---|
| Get player IDs | `fetchText` + regex on `limit=5&page=N` | Avoids JSON parse of large paginated response |
| Player name | `fetchText` + regex on athlete endpoint | Extracts `fullName` from first 400 chars before truncation |
| Score | `fetchJSON` on `/score` | Only 247 chars, always valid |
| Status/position | `fetchJSON` on `/status` | 577 chars, always valid |
| Round scores | `fetchJSON` on `/linescores` | Loads async after initial render |

---

## You

We only see 4 players, and they have the same score. Then the position should be the same.. First player disapered for some erason

---

## Claude

Let me debug both issues — the missing first player and the duplicate scores. The problem is likely in how we're extracting IDs/orders and matching scores back to players:

[Plugin code — see plugin.js]

### What's fixed
- **Added `console.log`** at every step — open browser DevTools → Console to see exactly what IDs/orders/names are being extracted
- **Logs the raw page text** so we can see if the regex is matching correctly
- **Logs all valid players** before render so we can confirm names and scores

Check the browser console and paste what you see for the page logs — that'll pinpoint exactly where the first player drops and why scores are duplicated. 🏌️

---

## You

installHook.js:1 Failed player 9938: SyntaxError: Unterminated string in JSON at position 179 (line 1 column 180)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
await in load
render @ VM312:200
mount @ InlinePreview.jsx:18
(anonymous) @ InlinePreview.jsx:33
react_stack_bottom_frame @ react-dom_client.js?v=ea47f848:12903
runWithFiberInDEV @ react-dom_client.js?v=ea47f848:850
commitHookEffectListMount @ react-dom_client.js?v=ea47f848:6616
commitHookPassiveMountEffects @ react-dom_client.js?v=ea47f848:6651
reconnectPassiveEffects @ react-dom_client.js?v=ea47f848:7700
recursivelyTraverseReconnectPassiveEffects @ react-dom_client.js?v=ea47f848:7687
reconnectPassiveEffects @ react-dom_client.js?v=ea47f848:7712
doubleInvokeEffectsOnFiber @ react-dom_client.js?v=ea47f848:8923
runWithFiberInDEV @ react-dom_client.js?v=ea47f848:850
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
commitDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8931
flushPassiveEffects @ react-dom_client.js?v=ea47f848:8808
(anonymous) @ react-dom_client.js?v=ea47f848:8561
performWorkUntilDeadline @ react-dom_client.js?v=ea47f848:35
installHook.js:1 Failed player 5579: SyntaxError: Unterminated string in JSON at position 182 (line 1 column 183)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
await in load
render @ VM312:200
mount @ InlinePreview.jsx:18
(anonymous) @ InlinePreview.jsx:33
react_stack_bottom_frame @ react-dom_client.js?v=ea47f848:12903
runWithFiberInDEV @ react-dom_client.js?v=ea47f848:850
commitHookEffectListMount @ react-dom_client.js?v=ea47f848:6616
commitHookPassiveMountEffects @ react-dom_client.js?v=ea47f848:6651
reconnectPassiveEffects @ react-dom_client.js?v=ea47f848:7700
recursivelyTraverseReconnectPassiveEffects @ react-dom_client.js?v=ea47f848:7687
reconnectPassiveEffects @ react-dom_client.js?v=ea47f848:7712
doubleInvokeEffectsOnFiber @ react-dom_client.js?v=ea47f848:8923
runWithFiberInDEV @ react-dom_client.js?v=ea47f848:850
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
recursivelyTraverseAndDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8916
commitDoubleInvokeEffectsInDEV @ react-dom_client.js?v=ea47f848:8931
flushPassiveEffects @ react-dom_client.js?v=ea47f848:8808
(anonymous) @ react-dom_client.js?v=ea47f848:8561
performWorkUntilDeadline @ react-dom_client.js?v=ea47f848:35
VM312:134 Valid players: []
installHook.js:1 Error: No player data loaded
    at load (eval at executePlugin (pluginLoader.js:160:13), <anonymous>:136:34)
    at async Object.render (eval at executePlugin (pluginLoader.js:160:13), <anonymous>:200:5)

---

## Claude

The score endpoint is truncating at ~179 chars now too — the proxy limit is very inconsistent. But the score endpoint previously returned 247 chars with `value` and `displayValue`. The key insight: **`displayValue` appears very early in the response**. Let me use raw text + regex for score AND status too, just like we do for athlete names:

[Plugin code — see plugin.js]

### What changed
- **All 3 sub-endpoints** (score, status, athlete) now use **raw `fetchText()` + regex** — no JSON parsing at all
- Regex extracts `displayValue`, `value`, `thru`, `hole`, `state`, `fullName`, `shortName`, `citizenship` from raw text before any truncation point
- **Batches of 5** players fetched in parallel to avoid rate limiting
- Falls back gracefully if any single field is missing

---

## You

Page 1 raw (470 chars): {"count":91,"pageIndex":1,"pageSize":5,"pageCount":19,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&regi
VM312:84 Page 1 ids: ['9938'] orders: [1]
VM312:78 Page 1 raw (470 chars): {"count":91,"pageIndex":1,"pageSize":5,"pageCount":19,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&regi
VM312:84 Page 1 ids: ['9938'] orders: [1]
VM312:78 Page 2 raw (471 chars): {"count":91,"pageIndex":2,"pageSize":5,"pageCount":19,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/5579?lang=en&regi
VM312:84 Page 2 ids: ['5579'] orders: [6]
VM312:97 All entries: (2) [{…}, {…}]
VM312:78 Page 1 raw (470 chars): {"count":91,"pageIndex":1,"pageSize":5,"pageCount":19,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/9938?lang=en&regi
VM312:84 Page 1 ids: ['9938'] orders: [1]
VM312:78 Page 2 raw (471 chars): {"count":91,"pageIndex":2,"pageSize":5,"pageCount":19,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/5579?lang=en&regi
VM312:84 Page 2 ids: ['5579'] orders: [6]
VM312:97 All entries: (2) [{…}, {…}]
VM312:78 Page 2 raw (471 chars): {"count":91,"pageIndex":2,"pageSize":5,"pageCount":19,"items":[{"$ref":"http://sports.core.api.espn.com/v2/sports/golf/leagues/pga/events/401811941/competitions/401811941/competitors/5579?lang=en&regi
VM312:84 Page 2 ids: ['5579'] orders: [6]
VM312:97 All entries: (2) [{…}, {…}]
installHook.js:1 Failed player 9938: SyntaxError: Unterminated string in JSON at position 179 (line 1 column 180)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
installHook.js:1 Failed player 5579: SyntaxError: Unterminated string in JSON at position 323 (line 1 column 324)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
VM312:134 Valid players: []
installHook.js:1 Error: No player data loaded
    at load (eval at executePlugin (pluginLoader.js:160:13), <anonymous>:136:34)
overrideMethod @ installHook.js:1
console.error @ useWidgetRender.js:55
console.error @ useWidgetRender.js:55
console.error @ useWidgetRender.js:55
load @ VM312:156
installHook.js:1 Failed player 9938: SyntaxError: Unterminated string in JSON at position 320 (line 1 column 321)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
installHook.js:1 Failed player 5579: SyntaxError: Unterminated string in JSON at position 323 (line 1 column 324)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
VM312:134 Valid players: []
installHook.js:1 Error: No player data loaded
    at load (eval at executePlugin (pluginLoader.js:160:13), <anonymous>:136:34)
overrideMethod @ installHook.js:1
console.error @ useWidgetRender.js:55
console.error @ useWidgetRender.js:55
console.error @ useWidgetRender.js:55
load @ VM312:156
installHook.js:1 Failed player 9938: SyntaxError: Unterminated string in JSON at position 179 (line 1 column 180)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
installHook.js:1 Failed player 5579: SyntaxError: Unterminated string in JSON at position 323 (line 1 column 324)
overrideMethod @ installHook.js:1
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
console.warn @ useWidgetRender.js:59
eval @ VM312:128
await in eval
load @ VM312:102
VM312:134 Valid players: []
installHook.js:1 Error: No player data loaded
    at load (eval at executePlugin (pluginLoader.js:160:13), <anonymous>:136:34)

---

## Claude

Two clear problems:

1. **The competitors page only returns 1 ID** — the regex only catches the first `"id":"XXXX"` because the response is truncated at 470 chars (only shows the first player's `$ref` URL)
2. **Player sub-endpoints still fail** — still trying to parse as JSON somewhere

The core issue: **the proxy truncates everything to ~400-500 chars**. We need to extract ALL data from those 400-500 chars using regex only — no `res.json()` at all, ever.

Let me rewrite completely using **only raw text + regex**, and fetch `limit=1&page=N` for each player individually:

[Plugin code — see plugin.js]

### Key fixes
| Problem | Fix |
|---|---|
| Only 1 ID per page | Fetch `limit=1&page=N` — one player per request, no truncation |
| JSON parse failures | **Zero JSON parsing** — everything is raw text + regex |
| Score/status failing | All sub-endpoints use `fetchText()` + `rx()`/`rxNum()` regex helpers |
| Movement wrong field | Read `movement` from competitor page, not score endpoint |

---

## You

Thoose players that have the same score should have the same position

---

## Claude

// @bump: patch

[Plugin code — see plugin.js]

### What's fixed

- **Tied positions now calculated client-side** — players are sorted by `scoreVal` (numeric), then we walk the sorted array and assign `T{pos}` to any group sharing the same score
- The ESPN `isTie` field was unreliable; we now **ignore it and compute ties ourselves** from the actual score values
- Position display logic: if `players[i].scoreVal === players[i-1].scoreVal` → same `displayPos` + `isTie = true` → renders as `T2`, `T5` etc.

---

## You

The css seems to change when reloading for some reason. And TOT sometimes is total score and sometimes how much over par.

---

## Claude

// @bump: patch

[Plugin code — see plugin.js]

### What's fixed

| Problem | Fix |
|---|---|
| **CSS flickers on reload** | Styles injected into `<head>` with a unique ID — checked before inserting so never duplicated, never re-injected on re-render |
| **TOT shows strokes sometimes** | Now always uses `completedRoundsDisplayValue` (e.g. `-7`) which is always the to-par total — falls back to `displayValue` only if missing |
| **Tied positions** | Computed client-side by sorting on `totVal` — players with identical scores get the same `T{N}` label |

---

## You

Failed to load resource: net::ERR_INSUFFICIENT_RESOURCES

---

## Claude

The widget is firing too many parallel requests and exhausting the browser's connection pool. Let me throttle everything to **sequential small batches** with a small delay between them:

[Plugin code — see plugin.js]

### What changed
| Problem | Fix |
|---|---|
| **ERR_INSUFFICIENT_RESOURCES** | All requests now **sequential** with `sleep(80-100ms)` between each — never more than 3 parallel requests at once |
| **CSS flicker** | Style tag injected once into `<head>` with ID check, never re-injected |
| **TOT inconsistency** | Always uses `completedRoundsDisplayValue` → to-par, with `displayValue` as fallback |
| **Tied positions** | Computed client-side from sorted `totVal` |

The tradeoff is slightly slower initial load (~2-3s for 10 players) but no connection exhaustion. 🏌️

---

## You

When updating the leaderboard, it uses 60 requests

---

## Claude

The refresh is re-fetching everything from scratch every 60 seconds — 6 requests per player × 10 players = 60 requests. Let me fix this by **caching player IDs and names** after the first load, and only re-fetching scores and statuses on refresh:

[Plugin code — see plugin.js]

### What changed

| Problem | Fix |
|---|---|
| **60 requests per refresh** | Roster (IDs + names) fetched once and **cached in `hiddenConfig`** via `api.updateConfig()` — subsequent refreshes only fetch score + status + movement (3 requests per player = 30 total → drops to **20 on refresh**) |
| **Phase 1 (roster)** | Runs only on first load — `limit=1&page=N` + athlete name fetch |
| **Phase 2 (scores)** | Runs every refresh — score + status + movement per player |

On refresh it now uses **3 requests × 10 players = 30 requests**, all sequential with throttling. The roster is cached until the widget is reset. 🏌️

---

## You

installHook.js:1 Encountered two children with the same key, `1775760846419`. Keys should be unique so that components maintain their identity across updates. Non-unique keys may cause children to be duplicated and/or omitted — the behavior is unsupported and could change in a future version.

---

## Claude

That's a React warning from the dashboard itself — it means our table rows have duplicate `key` values. The keys are being generated from timestamps or something non-unique. Let me use the player ID as the row key instead:

[Plugin code — see plugin.js]

### What's fixed

| Problem | Fix |
|---|---|
| **Duplicate key warning** | Table rows now use `data-id="${p.id}"` (ESPN athlete ID like `9938`) as the unique identifier — always unique, never a timestamp |
| **CSS flicker** | Style tag injected once, checked by ID before inserting |
| **TOT inconsistency** | Always reads `completedRoundsDisplayValue` first, falls back to `displayValue` |
| **Tied positions** | Computed client-side from sorted `totVal` |

The React warning was coming from the dashboard rendering our `innerHTML` rows — using the stable ESPN player ID as `data-id` ensures each row has a permanent unique identity across re-renders. 🏌️

---

## You

Still 60 requests

---

## Claude

Looking at the current code, the caching logic is there but the `cachedRoster` check isn't working — it's re-fetching names every time. Let me trace the exact flow and fix it properly:

[Plugin code — see plugin.js]

### What's fixed

The key problem was `players` was declared inside `load()` so it reset to `null` on every interval tick. Now:

| Fix | Detail |
|---|---|
| **`players` in closure** | Declared outside `load()` — survives across all interval refreshes |
| **Cache restored on startup** | If `config.cachedRoster` exists, players are pre-populated before `load()` is called — skips Phase 1 entirely |
| **Refresh = Phase 2 only** | `loadScores()` fetches score + status + movement = **3 requests × 10 players = 30 requests** on refresh, not 60 |
| **Cache saved after Phase 1** | `api.updateConfig({ cachedRoster: ... })` persists IDs + names so next widget mount also skips Phase 1 |

---

## You

Now we had 30 requests

---

## Claude

Good progress! 30 is better than 60, but we can cut it further. The movement field is already inline on the competitor page we fetch for IDs — we don't need a separate request for it. And we can get score + status in just 2 requests per player instead of 3:

[Plugin code — see plugin.js]

### What changed

| Problem | Fix |
|---|---|
| **30 requests on refresh** | Down to **20 requests** — score + status only (2 per player), movement read from score response if present, otherwise kept from last known value |
| **Movement field** | Read from score endpoint text via regex — if missing, retains last known value instead of resetting to 0 |
| **Roster cache** | Phase 1 (IDs + names) still only runs once and is persisted in `hiddenConfig` |

---

## You

Now we got more requests again

---

## Claude

Looking at the current source code more carefully — the `loadScores` function is making 2 requests per player (score + status), but `loadRoster` during Phase 1 makes 3 per player (competitor page + athlete name + sleep). The issue is likely that `players` is being reset to `null` on each render cycle.

Let me add a console log to see exactly what's happening:

[Plugin code — see plugin.js]

Paste the console output and I'll see exactly where the extra requests come from. But my strong suspicion is `render()` is being called **twice** by React's strict mode — which would explain 2× the requests. If that's the case the fix is to guard with a `container.__initialized` flag.

---

## You

installHook.js:1 Encountered two children with the same key, `1775761912484`. Keys should be unique so that components maintain their identity across updates. Non-unique keys may cause children to be duplicated and/or omitted — the behavior is unsupported and could change in a future version.

---

## Claude

React Strict Mode is mounting the widget **twice** — that's why we get 2× requests and duplicate keys. The fix is to guard against double-initialization with a flag on the container:

[Plugin code — see plugin.js]

### What's fixed

| Problem | Fix |
|---|---|
| **Double mount (React Strict Mode)** | `container.__initialized` guard at the very top — second mount returns immediately, no duplicate requests or keys |
| **Duplicate row keys** | Rows use `data-id="${p.id}"` (stable ESPN athlete ID) |
| **Request count on refresh** | Phase 1 (roster) skipped if `players` already populated in closure — only Phase 2 (score + status + linescores = 3 per player) runs on refresh |

---
